# SolarAiHelper

./: .env  .env.example  .gitignore  .replit  CRITICAL_ISSUES_RESOLVED.md  ENHANCED_FEATURES.md  NEURAL_BACKGROUND_GUIDE.md  README.md  SECURITY.md  STATIC_DEPLOYMENT_SUMMARY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  app.py  app_enhanced.py  app_modern.py  app_redesigned.py  check_status.py  create_test_images.py  neural_demo.html  pyproject.toml  requirements.txt  run_app.py  security-audit-report.json  security-audit.js  start_solar_ai.py
.streamlit/: config.toml
attached_assets/: Pasted--CONTEXT-Adopt-the-role-of-an-expert-full-stack-AI-engineer-with-advanced-knowledge-in-frontend-e-1749224104815.txt  Pasted--Full-Detailed-Planner-for-the-Solar-Industry-AI-Assistant-Project-This-planner-is--1749221457118.txt
backend/: advanced_cv_analysis.py  api_integrations.py  image_analysis.py  llm_integration.py  nasa_api.py  report_generator.py  solar_calculations.py
config/: constants.py
docs/: API_KEY_SECURITY.md  DEPLOYMENT_GUIDE.md  README.md  SECURITY_GUIDE.md  USER_GUIDE.md  index.html  test.html
docs/css/: neural.css  styles.css
docs/js/: ai-integration.js  api-security-monitor.js  app.js  image-processing.js  neural-background.js  pdf-generator.js  security-validator.js  solar-calculations.js
frontend/components/: chatbot.py  roof_3d_viewer.html  visualization_3d.py
frontend/styles/: main.css
static/css/: enhanced_styles.css  neural_background.css
static/js/: interactive_effects.js  neural_3d.js  (+1 more)
utils/: helpers.py  security.py  validators.py
